# fetap

./: .gitignore  README.md  autoupdater.service.template  dev  fetap.Dockerfile  fetap_bootstrap.py  notes  pyproject.toml  release.txt  requirements.txt  rpi_bootstrap.sh  setup.py  steps
.github/workflows/: compile-pjsua.yml  rpi-image.yml  server-build-docker.yml
dev_cli/: pyproject.toml
dev_cli/dev_cli/: __main__.py
device/: fetap_bootstrap.py
device/baresip/: Dockerfile  config
device/fetap-baresip/: Dockerfile
device/fetap-baresip-conf/: Dockerfile
device/fetap-config-server/: Dockerfile
device/fetap-core/: Dockerfile
device/fetap-core/fetap/: dial.py  error_correction.py  fake_gpio.py  logging.py
fetap/: __main__.py  conman.py  deploy.py  dial.py  fake_gpio.py  main.py  pjsua.py  storage.py  web_server.py
fetap/templates/: list_numbers.html  settings.html
notes/: Setting up a github runner.md  server deployment.md
schematics/: .gitignore
schematics/fetap_board/: fetap_board.kicad_pcb  fetap_board.kicad_prl  fetap_board.kicad_pro  fetap_board.kicad_sch  fp-info-cache  fp-lib-table
schematics/fetap_board/Fetap.pretty/: Boost Converter Module.kicad_mod  Fetap Pin Horizontal x 4.kicad_mod  Fetap Pin Horizontal.kicad_mod  Fetap Pin Vertical x 4.kicad_mod  Fetap Pin Vertical.kicad_mod  Fetap Receiver Switch.kicad_mod  Hollow Plug.kicad_mod  RPi Zero.kicad_mod
server/: authorized_keys  developer_keys  docker-compose-prod.yml
server/fetap-asterisk/: Dockerfile  pjsip.conf
server/fetap-asterisk/conf/: asterisk.conf  (+5 more)
server/fetap-certbot/: Dockerfile  run.sh
server/fetap-nginx/: Dockerfile  http.conf
server/fetap-server/: Dockerfile  pyproject.toml
tests/: test_error_correction.py  test_main.py  test_storage.py
(+3 files in other folders)
